# lbtools

./: .gitignore  Cargo.toml  README.md
lb_norm/: Cargo.toml  README.md
lb_norm/src/: cli.rs  config.rs  io.rs  main.rs  process.rs  sample.rs
lb_predict_cn/: Cargo.toml  README.md
lb_predict_cn/src/: cli.rs  config.rs  contig.rs  controller.rs  coverage.rs  gc.rs  input.rs  main.rs  output.rs  process.rs  reader.rs  sample.rs
lb_region_test/: Cargo.toml  README.md
lb_region_test/src/: cli.rs  config.rs  io.rs  main.rs  process.rs  region.rs  sample.rs
src/: cli.rs  config.rs  contig.rs  controller.rs  coverage.rs  data.rs  gc.rs  input.rs  main.rs  normalize.rs  output.rs  process.rs  reader.rs  sample.rs  utils.rs
utils/: Cargo.toml
utils/src/: lib.rs
