[workspace]
members = ["lb_predict_cn", "lb_norm", "lb_region_test", "utils"]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Simon Heath"]
description = "Utilities for working with whole genome sequencing data from liquid biopsy samples"
# documentation = "https://example.com/bar"


[profile.release]
lto = "thin"
debug = true

[workspace.dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~4", features = ["cargo", "color"]}
compress_io = "~0.5"
anyhow = "~1.0"
num_cpus = "~1"
crossbeam-channel = "~0.5"
utils = { path = "utils" }
