[package]
name = "lb_norm"
edition = "2021"
description = "Generate binned coverage normalized for gc content from SAM/BAM/CRAM files"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
stderrlog.workspace = true
clap.workspace = true
compress_io.workspace = true
anyhow.workspace = true
num_cpus.workspace = true
crossbeam-channel.workspace = true
utils.workspace = true
regex = "1"

