[package]
name = "lb_predict_cn"
edition = "2021"
description = "Generate binned coverage normalized for gc content from SAM/BAM/CRAM files"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~4", features = ["cargo"]}
compress_io = "~0.5"
anyhow = "~1.0"
num_cpus = "~1"
crossbeam-channel = "~0.5"
r_htslib = { git = "https://github.com/heathsc/r_htslib.git" }
