[package]
name = "lb_region_test"
edition = "2021"
description = "Test for differences between samples and controls at specific genomic regions"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
stderrlog.workspace = true
clap.workspace = true
compress_io.workspace = true
anyhow.workspace = true
num_cpus.workspace = true
crossbeam-channel.workspace = true
utils.workspace = true
regex = "1"

